[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/pause_panel.gd" type="Script" id=1]
[ext_resource path="res://graphics/ui/panels/pause_panel.png" type="Texture" id=2]
[ext_resource path="res://scenes/big_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://graphics/ui/main_screen/save.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "open_panel"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("core:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, 96.2958 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="pause_panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
pnl_clr = Color( 0.878431, 0.270588, 0.129412, 1 )
buttons = [ NodePath("core/resume"), NodePath("core/home"), NodePath("core/settings"), NodePath("core/leave") ]

[node name="color_rect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="core" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1377.08, -2.50107 )

[node name="panel_img" type="TextureRect" parent="core"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.5
margin_top = -426.0
margin_right = 282.5
margin_bottom = 426.0
texture = ExtResource( 2 )

[node name="resume" parent="core" instance=ExtResource( 3 )]
margin_left = -240.0
margin_top = -171.198
margin_right = 244.0
margin_bottom = -52.1978
button_name = "Resume"
highlight = true

[node name="home" parent="core" instance=ExtResource( 3 )]
editor/display_folded = true
margin_left = -240.0
margin_top = -31.1978
margin_right = 244.0
margin_bottom = 87.8022
button_name = "Home"

[node name="texture_rect3" type="TextureRect" parent="core/home"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -37.0
margin_right = -35.0
margin_bottom = 37.0
texture = ExtResource( 4 )

[node name="settings" parent="core" instance=ExtResource( 3 )]
margin_left = -240.0
margin_top = 108.802
margin_right = 244.0
margin_bottom = 227.802
button_name = "Settings"
highlight = true

[node name="leave" parent="core" instance=ExtResource( 3 )]
editor/display_folded = true
margin_left = -240.0
margin_top = 248.802
margin_right = 244.0
margin_bottom = 367.802
button_name = "Leave"

[node name="texture_rect2" type="TextureRect" parent="core/leave"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -37.0
margin_right = -35.0
margin_bottom = 37.0
texture = ExtResource( 4 )

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/open_panel = SubResource( 1 )
[connection signal="pressed" from="core/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="core/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="core/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="core/leave" to="." method="_on_leave_pressed"]
